[package]
name = "rust-tcp-bench"
version = "0.1.0"
authors = ["master <alxe.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "=0.7.0", features = ["os-util", "os-poll", "udp", "tcp"] }
rand = "=0.7.3"
clap = "=2.33.0"
hdrhist = "=0.5.0"
futures = "=0.3.5"
bytes = "=0.5.6"
core_affinity = "=0.5.10"
itertools = "=0.9.0"
tokio = { version = "=0.2.20", features = ["rt-core","rt-threaded","rt-util","io-driver","io-util","io-std","net","tcp","udp","uds","time","process","macros","sync","stream","signal","fs","dns","test-util","blocking"] }
tokio-util = { version = "0.3.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1 # kills off parallel compilation to gain more effective link-time optimization
opt-level = 3
debug = false
debug-assertions = false
#overflow-checks = false
#panic = "abort"
